OOP Intro and Export Import

--- a/dom.html
+++ b/dom.html
@@ -68,6 +68,13 @@
         // Memanipulasi elemen berdasarkan id
         $('#text').css('color', 'white');
         
+        var objek = {
+            nama: "fateh",
+            lari : () => {return this.nama + "berlari"}
+        }
+
+        objek.lari()
+
         function getStatusVal()
         {
             // var testing = document.getElementById('active').value;
